Bug 181137 - Powerdevil does not reenable KWin effects
Summary: Powerdevil does not reenable KWin effects
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-18 04:22 UTC by Alec Moskvin
Modified: 2010-10-02 12:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alec Moskvin 2009-01-18 04:22:32 UTC
Version:            (using Devel)
Compiler:          gcc (Gentoo 4.3.2-r2 p1.5, pie-10.1.5) 4.3.2 
OS:                Linux
Installed from:    Compiled sources

If KDE is shut down on battery (and PowerDevil disables KWin effects) and started up with AC plugged, the KWin effects are not re-enabled.

To reproduce:
1. Unplug the cable
2. Log out
3. Plug the cable in
4. Log in

Results:
The KWin effects are disabled and can only be reenabled with SystemSettings.

This is a pretty major annoyance since it is pretty rare that people plug in a running computer...

This occurs in KDE 4.1.96 (KDE 4.2 RC1)

Thanks!
Comment 1 Dario Freddi 2009-01-18 11:52:22 UTC
Confirmed, fixing it asap
Comment 2 Dario Freddi 2009-01-18 12:16:56 UTC
SVN commit 912787 by dafre:

BUG: 181137

My bad. This bug was already fixed, but I forgot to save the configuration file.
Blame and shame on me, now it works as expected.


 M  +3 -3      PowerDevilDaemon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=912787
Comment 3 Alec Moskvin 2009-01-18 17:25:56 UTC
Thanks a lot!