BUG: 181137

My bad. This bug was already fixed, but I forgot to save the configuration file.
Blame and shame on me, now it works as expected.

svn path=/trunk/KDE/kdebase/workspace/; revision=912787